Blacklist multisampled render to texture on Android 7.1 Adreno 5xx

Multisampled render to texture appears to be broken on Android 7.1 and
Adreno 5xx, similar to issues reported in Android < 7.0. This is fixed
in 7.1.1.

We should confirm that this is working in 7.0 if possible. The device
where this issue was reported (Pixel XL / Pixel) didn't ship with 7.0.

This issue appears to result in multisampled rendering failing to
produce output in cases when rendering to a texture that has already
been used in a previous render pass.

BUG=663811
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2514283002
Cr-Commit-Position: refs/heads/master@{#434829}

Former-commit-id: 319e63917b9f7731d260de54dcdcfec1547ab1c5